# kubic

./: .gitignore  README.md  crds.fish  kubegen.py  pyproject.toml  setup.cfg  test.py  tests.py
annotations/: gateway.envoyproxy.io.yaml  gateway.networking.k8s.io.yaml  gateway.networking.x-k8s.io.yaml
k8s/: base.py
schemas/: annotations.yaml  cilium.crds.yaml  sealedsecrets.bitnami.com.json
schemas/crds/: 01-cnpg.yml  01-envoy.yml  01-prometheus.yml  cert-manager.yaml  cilium.yaml  postgres-operator.yaml  prometheus-operator.yaml  rook-ceph.yaml  sealedsecrets.bitnami.com.json  sealedsecrets.bitnami.com.yaml  verticalpodautoscaler.autoscaling.k8s.io.json  victoriametrics-operator.yaml
schemas/crds/prometheus-operator/: monitoring.coreos.com_alertmanagerconfigs.yaml
src/: kubegen.py
src/kubic/: __init__.py  admissionregistration.py  any.py  api.py  apiextensions.py  apps.py  autoscaling.py  base.py  batch.py  core.py  meta.py  networking.k8s.io.py  networking.py  policy.py  rbac.py  rbac_authorization.py  reader.py  scheduling.py  storage.k8s.io.py  storage.py  writer.py
src/kubic/api/: admissionregistration.py  apiextensions.py  apiregistration.py  apps.py  authentication.py  authorization.py  autoscaling.py  batch.py  certificates.py  coordination.py  core.py  discovery.py  events.py  flowcontrol.py  internal.py  meta.py  networking.py  node.py  policy.py  rbac.py  resource.py  scheduling.py  storage.py  storagemigration.py
src/kubic/crds/: autoscaling.py  bitnami.py  cert_manager.py  certificate.py  certificates.py  cilium.py  cilium_clusterwide_network_policy.py  cilium_network_policy.py  ciliumclusterwidenetworkpolicies.py  ciliumnetworkpolicies.py  externaldns.py  gateway.py  monitoring.py  pod_monitor.py  podmonitors.py  postgres_operator.py  probe.py  probes.py  prometheus_rule.py  prometheusrules.py  rook.py  sealed_secret.py  sealedsecrets.py  service_monitor.py  servicemonitors.py  vertical_pod_autoscaler.py  verticalpodautoscaler.py  (+1 more)
src/pykapi/: annotations.py  api.py  cli.py  crd.py  k8s.py  parser.py  printer.py  types.py
(+14 files in other folders)
