[metadata]
name = kubic
version = 2.6.0
description = Kubernetes API wrapper
keywords = kubernetes
license = BSD 3-Clause License
classifiers =
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10

[options]
packages = kubic,pykapi,pykapi.annotations
package_dir =
    =src
include_package_data = True
install_requires =
    pyyaml

[options.package_data]
* = *.yaml

[options.entry_points]
console_scripts =
    pykapi = pykapi.cli:main
